# cpp-meson-template

./: .clang-format  .clang-tidy  .gitignore  CNAME  Doxyfile  README.md  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  foo_8hpp.html  foo_8hpp_source.html  globals.html  globals_func.html  index.html  main_8cpp.html  meson.build  meson.options
.github/workflows/: main.yml
docs/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  foo_8hpp.html  foo_8hpp_source.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html
docs/html/search/: files_0.js
docs/latex/: dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  foo_8hpp.tex  foo_8hpp_source.tex  main_8cpp.tex.tmp  refman.tex
include/: foo.hpp
meson/: meson.build
meson/compiler-flags/: meson.build
meson/external-libs/: meson.build
meson/wrapdb-packages/: meson.build
scripts/: format.sh  lint.sh
src/: main.cpp  meson.build
