# -- Dependencies -----

dependencies = []
incdir_deps = []

# -- WrapDB packages -----

# To add install a WrapDB package: 
#   1. Create the `subprojects` directory
#   1. Run the command: `meson wrap install <package_name>`
#   2. Add to the dependencies list

# Here are some useful WrapDB packges you might want to need (install and uncomment):

## Package name: argparse -----
# argparse_dep = dependency('argparse', required: true)
# dependencies += argparse_dep

## Package name: google_benchmark -----
# benchmark_dep = dependency('benchmark' , required: true)
# benchmark_main_dep = dependency('benchmark-main', required: true)
# dependencies += [benchmark_dep, benchmark_main_dep]

## Package name: fmt
# fmt_dep = dependency('fmt', required: true)
# dependencies += fmt_dep

## Package name: spdlog
# spdlog_dep = dependency('spdlog', required: true)
# dependencies += spdlog_dep

## Package name: gtest
# gtest_dep = dependency('gtest', required: true)
# gtest_main_dep = dependency('gtest_main', required: true)
# gmock_dep = dependency('gmock', required: true)
# gmock_main_dep = dependency('gmock_main', required: true)
# dependencies += [
#   gtest_dep,
#   gtest_main_dep,
#   gmock_dep,
#   gmock_main_dep
# ]

## Package name: catch2
# catch2_dep = dependency('catch2', required: true)
# catch2_with_main_dep = dependency('catch2-with-main', required: true)
# dependencies += [catch2_dep, catch2_with_main_dep]


